--- a/index.html
+++ b/index.html
@@ -12,15 +12,96 @@
 	   <!-- link -->
 	   <link rel="stylesheet" href="css/style.css">
 	   <link rel="shortcut icon" href="img/favicon.ico">
+	   <!-- fontawsome -->
 	   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <title>iSara | 模写</title>
+    
+	<title>iSara[イサラ] | 模写</title>
+	
+		<!-- OGP -->
+		<meta property="og:url" content="https://micmic541.github.io/isara.github.oi/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="iSara[イサラ] | 模写">
+		<meta property="og:description" content="藤本実希によるiSaraの模写です">
+		<meta property="og:image" content="img/isaraogp.png">
 	</head>
 	
 	<body>
+	<div class="body_wrapper">
 	
-	
-	
-	
+		<header>
+			<section class="header">
+				<nav class="navbar d-block bg-white">
+				  <div class="nav_container d-flex flex-row">
+					<div class="nav_item d-flex flex-lg-row flex-md-row flex-column-reverse align-items-lg-end align-items-md-end align-items-baseline">
+						<img class="navbar-brand" src="img/isaralogo.png" alt="#">
+						<p>バンコクのノマドエンジニア育成講座</p>
+					</div><!--item-->
+					<div class="nav_item">
+						<btn type="button"></btn>
+					</div><!--item-->
+				  </div><!--/.nav_container-->
+				</nav><!--/.nav-->
+				<div class="header_container">
+					<div class="header_item">
+						<h2 class="sub_title">プログラミングで<br>人生の安定を手に入れよう</h2>
+						<img class="img-fluid pb-4" src="img/isaralogo.png" alt="#">
+						<p class="mt-4">バンコクのノマドエンジニア育成講座<br>iSara[イサラ]</p>
+					</div><!--/.header_item-->
+				</div><!--/.header_container-->
+			</section>
+		</header><!--/.header------------------------------->
+		
+		<section class="2">
+		</section>
+		
+		<section class="3">
+		</section>
+		
+		<section class="4">
+		</section>
+		
+		<section class="5">
+		</section>
+		
+		<section class="6">
+		</section>
+		
+		<section class="7">
+		</section>
+		
+		<section class="8">
+		</section>
+		
+		<section class="9">
+		</section>
+		
+		<section class="10">
+		</section>
+		
+		<section class="11">
+		</section>
+		
+		<section class="12">
+		</section>
+		
+		<section class="13">
+		</section>
+		
+		<section class="14">
+		</section>
+		
+		<section class="15">
+		</section>
+		
+		<section class="16">
+		</section>
+		
+		<section class="17">
+		</section>
+		
+	</div><!--/.body_wrapper-->
+		<footer class="footer">
+		</footer>
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
