--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 			<section class="header">
 				<nav class="navbar d-block bg-white">
 				  <div class="nav_container d-flex flex-row">
-					<div class="nav_item d-flex flex-lg-row flex-md-row flex-column-reverse align-items-lg-end align-items-md-end align-items-baseline">
+					<div class="nav_item1 pb-2 pb-md-2 pb-lg-0 pl-3 pt-sm-1 d-flex flex-lg-row flex-md-row flex-column-reverse align-items-lg-end align-items-md-end align-items-baseline">
 						<img class="navbar-brand" src="img/isaralogo.png" alt="#">
 						<p>バンコクのノマドエンジニア育成講座</p>
 					</div><!--item-->
-					<div class="nav_item">
-						<btn type="button"></btn>
+					<div class="nav_item2 pt-lg-2 pt-0">
+						<a href="#"><btn type="button"></btn></a>
 					</div><!--item-->
 				  </div><!--/.nav_container-->
 				</nav><!--/.nav-->
