--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 		<header>
 			<section class="header">
-				<nav class="navbar d-block bg-white">
+				<nav class="navbar d-block bg-white fixed-top">
 				  <div class="nav_container d-flex flex-row">
 					<div class="nav_item1 pb-2 pb-md-2 pb-lg-0 pl-3 pt-sm-1 d-flex flex-lg-row flex-md-row flex-column-reverse align-items-lg-end align-items-md-end align-items-baseline">
 						<img class="navbar-brand" src="img/isaralogo.png" alt="#">
@@ -42,17 +42,37 @@
 				  </div><!--/.nav_container-->
 				</nav><!--/.nav-->
 				<div class="header_container">
-					<div class="header_item">
+					<div class="header_item pt-5">
 						<h2 class="sub_title">プログラミングで<br>人生の安定を手に入れよう</h2>
-						<img class="img-fluid pb-4" src="img/isaralogo.png" alt="#">
-						<p class="mt-4">バンコクのノマドエンジニア育成講座<br>iSara[イサラ]</p>
+						<img class="img-fluid pb-lg-4 pb-md-0 pb-sm-3 pb-1" src="img/isaralogo.png" alt="#">
+						<p class="mt-lg-4 mt-md-4 mt-0">バンコクのノマドエンジニア育成講座<br>iSara[イサラ]</p>
 					</div><!--/.header_item-->
 				</div><!--/.header_container-->
 			</section>
 		</header><!--/.header------------------------------->
 		
-		<section class="2">
-		</section>
+		<section class="orange">
+			<div class="wrapper container-fluid py-4">
+				<div class="text_box1">
+					<p>まずは２０日間で、<br>月１０万稼げるスキルを手にいれよう。</p>
+					<p class="mb-lg-5 mb-3 cat">※受講料金は実質０円です。詳しくは資料請求をどうぞ。</p>
+				</div><!--/.text_box-->
+				<div class="orange_btn">
+					<btn class="col-10" type="button"><p class="pt-4">
+					<a href="#">お問い合わせ＆資料請求はこちら</a></p></btn>
+				</div>
+				<div class="text_box2">
+					<p class="pt-lg-5 pt-md-4 pt-4">第６期生：2019年11月25日~2019年12月14日<br>※締め切りました</p>
+					<p class="py-3">第７期生：2020年2月17日~2020年3月7日<br>※締め切りました</p>
+					<p class="pb-3">第８期生：2021年の2月~3月ごろを予定<br>※資料請求受付中です<p>
+				</div><!--/.text_box-->
+				<div class="sns_box d-flex flex-row justify-content-center">
+					<p class="my_twitter px-2"><a href="#"><i class="fab fa-twitter my-white fa-fw fa-sm"></i>ツイート</a></p>
+					<p class="px-2 mx-2"><a href="#"><i class="fa fa-thumbs-up my-white fa-fw fa-sm"></i>いいね!</a></p>
+					<p class="px-2"><a href="#">シェア</a></p>
+				</div><!--/.sns-->
+			</div><!--/.wrapper-->
+		</section><!--/.orange----------------------------->
 		
 		<section class="3">
 		</section>
