--- a/index.html
+++ b/index.html
@@ -74,8 +74,20 @@
 			</div><!--/.wrapper-->
 		</section><!--/.orange----------------------------->
 		
-		<section class="3">
-		</section>
+		<section class="concept">
+		<div id="concept">
+			<div class="wrapper container-fluid py-4">
+				<div class="concept_item">
+					<h2 class="sub_title">エンジニアとして<br>本当の自由を手に入れるためには？</h2>
+				</div><!--/.sub_title-->
+				<div class="text_box3">
+					<p>エンジニア需要の高まりに伴い、<br class="brsp">プログラミングスクールが増えています。<br>しかしそこでの学習の先は、<br class="brsp">提携して決められた就職先に就職すること。</p>
+					<p class="my-lg-4 my-md-4 my-0">これで本当にいいのですか？<br>日本人エンジニアはアメリカと較べて<br class="brsp">給料が格段に低い。<br> <br class="brsp">その理由がここにあり、 <br class="brsp">エンジニアは自分の給料を<br class="brsp">コントロールすべきなのです。</p>
+					<p class="mt-lg-0 mt-md-0 mt-4">スキルを身につけたエンジニアは、<br class="brsp">人生をコントロールすることでより自由に。<br>そこで必要なのが<space class="underline">「稼ぐ力」</space>です。</p>
+				</div><!--/.text_box3-->
+			</div><!--/.wrapper-->
+		</div><!--/.concept id-->
+		</section><!--/.concept---------------------------->
 		
 		<section class="4">
 		</section>
