--- a/index.html
+++ b/index.html
@@ -87,10 +87,44 @@
 				</div><!--/.text_box3-->
 			</div><!--/.wrapper-->
 		</div><!--/.concept id-->
+			<div class="circle"></div>
 		</section><!--/.concept---------------------------->
 		
-		<section class="4">
-		</section>
+		<section class="about">
+			<div class="wrapper container-fluid">
+				<div class="about_item text-center">
+					<h2 class="sub_title">ノマドエンジニア育成講座<br>iSara[イサラ]とは？</h2>
+					<p>「稼ぐこと」にフォーカスしたWebエンジニア育成講座です。</p>
+				</div><!--/.sub_title-->
+				<div class="flex_box text-center">
+					<div class="flex_title">
+						<h4>稼げるエンジニアに必要な<br>５つのスキルとは？</h4>
+					</div><!--/.flex_title-->
+					<div class="flex_item d-flex flex-row flex-wrap justify-content-center"> 
+						<div class="item1">
+							<img class="item_logo img-fluid" src="img/skill.jpg" alt="#">
+							<p>基礎的な<br>プログラミングスキル</p>
+						</div><!--/.item-->
+						<div class="item2">
+							<img class="item_logo img-fluid" src="img/sales.jpg" alt="#">
+							<p>案件獲得に必要な<br>営業力</p>
+						</div><!--/.item-->
+						<div class="item3">
+							<img class="item_logo img-fluid" src="img/document.jpg" alt="#">
+							<p>見積もり作成から<br>納品までの知識</p>
+						</div><!--/.item-->
+						<div class="item4">
+							<img class="item_logo img-fluid" src="img/plusone.jpg" alt="#">
+							<p>自分の付加価値を<br>高めるスキル</p>
+						</div><!--/.item-->
+						<div class="item5">
+							<img class="item_logo img-fluid" src="img/connection.jpg" alt="#">
+							<p>フリーランス同士の<br>横のつながり</p>
+						</div><!--/.item-->
+					</div><!--/.flex_item-->
+				</div><!--/.flex_box-->
+			</div><!--/.wrapper--->
+		</section><!--/.about------------------------------>
 		
 		<section class="5">
 		</section>
