--- a/index.html
+++ b/index.html
@@ -93,14 +93,16 @@
 		<section class="about">
 			<div class="wrapper container-fluid">
 				<div class="about_item text-center">
-					<h2 class="sub_title">ノマドエンジニア育成講座<br>iSara[イサラ]とは？</h2>
-					<p>「稼ぐこと」にフォーカスしたWebエンジニア育成講座です。</p>
+					<h2 class="sub_title pb-3">ノマドエンジニア育成講座<br>iSara[イサラ]とは？</h2>
 				</div><!--/.sub_title-->
+				<div class="about_box">
+					<p class="pb-3 pt-5">「稼ぐこと」にフォーカスした<br>Webエンジニア育成講座です。</p>
+				</div><!--/.about_box-->
 				<div class="flex_box text-center">
-					<div class="flex_title">
+					<div class="flex_title pt-4">
 						<h4>稼げるエンジニアに必要な<br>５つのスキルとは？</h4>
 					</div><!--/.flex_title-->
-					<div class="flex_item d-flex flex-row flex-wrap justify-content-center"> 
+					<div class="flex_item py-4 d-flex flex-row flex-wrap justify-content-around"> 
 						<div class="item1">
 							<img class="item_logo img-fluid" src="img/skill.jpg" alt="#">
 							<p>基礎的な<br>プログラミングスキル</p>
@@ -126,8 +128,43 @@
 			</div><!--/.wrapper--->
 		</section><!--/.about------------------------------>
 		
-		<section class="5">
-		</section>
+		<section class="about2">
+		<div id="about2">
+			<div class="wrapper container-fluid">
+				<div class="about2_item text-center">
+					<h2 class="sub_title pb-3">iSara[イサラ]で<br>「基本的なプログラミングスキル」は教えません</h2>
+				</div><!--/.sub_title-->
+				<div class="about2_box">
+					<p class="pb-3 pt-4">基本的なプログラミングスキルは無料で学べる時代。</p>
+					<p class="pb-3">iSara[イサラ]では、基礎知識学習は<br>
+					<space>事前課題</space>と<space>チャットサポート</space>のみ。</p>
+				</div><!--/.about_box-->
+				<div class="flex_box">
+					<div class="flex_item">
+						<div class="item">
+							<title>STEP.1</title>
+							<p>【バンコク渡航前１ヶ月】</p>
+							<p>事前課題で基礎知識を学ぶ</p>
+						</div><!--/.item-->
+						<div class="item">
+							<title>STEP.2</title>
+							<p>【バンコク到着後】</p>
+							<p>実践的に稼ぐことに特化した学習</p>
+						</div><!--/.item-->
+						<div class="item">
+							<title>STEP.3</title>
+							<p>【バンコク帰国後】</p>
+							<p>講座実践後の案件獲得サポート</p>
+						</div><!--/.item-->
+					</div><!--/.flex_item-->
+				</div><!--/.flex_box-->
+			</div><!--/.wrapper-->
+		</div><!--/.id about2----------------------------->
+			<div class="about2_blue">
+				<p>スキルアップしてもフリーランスエンジニア<br>として食べていくことは難しい。</p>
+				<p>フリーランスには<space>プログラミングスキル以外</space>が大切。</p>
+			</div><!--/.about2_blue-->
+		</section><!--/.about2----------------------------->
 		
 		<section class="6">
 		</section>
