--- a/index.html
+++ b/index.html
@@ -140,19 +140,19 @@
 					<space>事前課題</space>と<space>チャットサポート</space>のみ。</p>
 				</div><!--/.about_box-->
 				<div class="flex_box">
-					<div class="flex_item">
+					<div class="flex_item d-flex flex-lg-row flex-column justify-content-center">
 						<div class="item">
-							<title>STEP.1</title>
+							<h6>STEP.1</h6>
 							<p>【バンコク渡航前１ヶ月】</p>
 							<p>事前課題で基礎知識を学ぶ</p>
 						</div><!--/.item-->
-						<div class="item">
-							<title>STEP.2</title>
+						<div class="item mx-4 my-lg-0 my-md-0 my-3">
+							<h6>STEP.2</h6>
 							<p>【バンコク到着後】</p>
 							<p>実践的に稼ぐことに特化した学習</p>
 						</div><!--/.item-->
 						<div class="item">
-							<title>STEP.3</title>
+							<h6>STEP.3</h6>
 							<p>【バンコク帰国後】</p>
 							<p>講座実践後の案件獲得サポート</p>
 						</div><!--/.item-->
