--- a/index.html
+++ b/index.html
@@ -135,23 +135,23 @@
 					<h2 class="sub_title pb-3">iSara[イサラ]で<br>「基本的なプログラミングスキル」は教えません</h2>
 				</div><!--/.sub_title-->
 				<div class="about2_box">
-					<p class="pb-3 pt-4">基本的なプログラミングスキルは無料で学べる時代。</p>
+					<p class="pt-4 pt-sm-2">基本的なプログラミングスキルは無料で学べる時代。</p>
 					<p class="pb-3">iSara[イサラ]では、基礎知識学習は<br>
 					<space>事前課題</space>と<space>チャットサポート</space>のみ。</p>
 				</div><!--/.about_box-->
 				<div class="flex_box">
-					<div class="flex_item d-flex flex-lg-row flex-column justify-content-center">
-						<div class="item">
+					<div class="flex_item text-center d-flex flex-lg-row flex-column justify-content-center">
+						<div class="item mx-lg-2 ">
 							<h6>STEP.1</h6>
 							<p>【バンコク渡航前１ヶ月】</p>
 							<p>事前課題で基礎知識を学ぶ</p>
 						</div><!--/.item-->
-						<div class="item mx-4 my-lg-0 my-md-0 my-3">
+						<div class="item mx-lg-2">
 							<h6>STEP.2</h6>
 							<p>【バンコク到着後】</p>
 							<p>実践的に稼ぐことに特化した学習</p>
 						</div><!--/.item-->
-						<div class="item">
+						<div class="item mx-lg-2">
 							<h6>STEP.3</h6>
 							<p>【バンコク帰国後】</p>
 							<p>講座実践後の案件獲得サポート</p>
