--- a/index.html
+++ b/index.html
@@ -166,11 +166,68 @@
 			</div><!--/.about2_blue-->
 		</section><!--/.about2----------------------------->
 		
-		<section class="6">
-		</section>
+		<section class="learn">
+			<div class="wrapper container-fluid">
+				<div class="learn_item py-5">
+					<h2 class="sub_title">iSara[イサラ]で学べること</h2>
+				</div><!--/.sub_title-->
+				<div class="learn_item mb-lg-5 mb-md-5 mb-0">
+					<p>iSaraの学習では、エンジニアとして<br>「稼ぐ」ために必要な能力を身に着けます。</p>
+				</div><!--/.learn_item-->
+				<div class="learn_box  mb-lg-5 mb-md-5 mb-4 d-flex flex-row justify-content-center">
+					<img class="img-fluid" src="img/salesskill.jpg" alt="">
+					<img class="img-fluid" src="img/knowledge.jpg" alt="">
+					<img class="img-fluid" src="img/skillup.jpg" alt="">
+					<img class="img-fluid" src="img/freelanceconnection.jpg" alt="">
+				</div><!--/.learn_box-->
+				<div class="learn_text">
+					<p>これらを教えるのがiSaraです。</p>
+				</div><!--/.learn_text-->
+			</div><!--/.wrapper-->
+		</section><!--/.learn------------------------------>
 		
-		<section class="7">
-		</section>
+		<section class="merit">
+			<div class="wrapper container-fluid">
+				<div class="merit_item py-5 mb-5">
+					<div class="sub_title">
+						<h4>他のプログラミングスクールとここが違う！</h4>
+						<h2>iSara[イサラ]の３つのメリット</h2>
+					</div><!--/.sub_title-->
+				</div><!--/.merit_item-->
+				<div class="flex_box mx-auto mb-5 col-lg-10 col-12">
+					<div class="flex_item">
+						<div class="item col-md-4 col-xs-12">
+							<div class="learnfromfreelance img-fluid"></div> 
+							<h5 class="item_title mt-2">現役フリーランスから学べる</h5>
+							<p>他のプログラミングスクールとは違い、実際にフリーランスとして活動しているエンジニアが直接講師を勤めます。</p>
+						</div><!--/.item-->
+						<div class="item col-md-4 col-xs-12">
+							<div class="learnfromprojects img-fluid"></div> 
+							<h5 class="item_title mt-2">実践を通して学べる</h5>
+							<p>フリーランスにとって最短の学習方法は「実践」。iSaraでは実案件を通して学びます。現役フリーランサーの案件サポートに加え、
+							クラウドソーシングを活用。初心者の自分じゃ無理と思うかもですが、現役フリーランスがサポートしますので大丈夫。</p>
+						</div><!--/.item-->
+						<div class="item col-md-4 col-xs-12">
+							<div class="actuallyfree img-fluid"></div> 
+							<h5 class="item_title mt-2">授業料が実質０円</h5>
+							<p>講座費用258,000円以上の金額が稼げるまで「永久サポート延長」があります。</p>
+						</div><!--/.item-->
+					</div><!--/.flex_item-->
+				</div><!--/.flex_box-->
+				<div class="mx-auto col-lg-10 col-12">
+					<div class="merit_box">
+						<h4 class="sub_title">さらに！帰国後もサポート付き</h4>
+						<h6 class="sub_title my-3">リモートワーカーのチームを作ることで<br>受注率、受注単価が大幅に向上します。</h6>
+						<p>iSaraは講座が終わって終了ではありません。<br>参加メンバーのチャットグループを作り、帰国後も継続的に案件参加できるようになります。
+						<br class="brpc">また、チームで働くことで継続的に稼ぎやすい仕組みづくりも構築しております。</p>
+					</div><!--/.merit_box-->
+					<div class="merit_text">
+						<p>事前課題ができない人はお断りしております。<br>iSaraでは、無料で学べるプログラミング基礎知識は教えません。
+						事前課題一覧はメールで送りつつ、チャットサポートのみ。従って、本気で取り組まないと結果は出ません。</p>
+					</div><!--/.merit_text-->
+				</div><!--/.merit_item-->
+			</div><!--/.wrapper-->
+		</section><!--/.merit------------------------------>
 		
 		<section class="8">
 		</section>
@@ -178,6 +235,7 @@
 		<section class="9">
 		</section>
 		
+		<!--/.sassの学習し始める-->
 		<section class="10">
 		</section>
 		
