--- a/index.html
+++ b/index.html
@@ -229,8 +229,65 @@
 			</div><!--/.wrapper-->
 		</section><!--/.merit------------------------------>
 		
-		<section class="8">
-		</section>
+		<section class="member">
+		<div id="member">
+			<div class="wrapper text-white container-fluid">
+				<div class="member_item pt-5 mb-4">
+					<div class="sub_title">
+						<h2><i class="far fa-id-card fa-xs"></i>
+						創業メンバー</h2>
+						<p>実際にフリーランスとして活躍しているエンジニアが立ち上げました</p>
+					</div><!--/.sub_title-->
+				</div><!--/.merit_item-->
+				<div class="flex_box mx-auto mb-5 col-lg-10 col-12">
+				<div class="flex_item">
+					<div class="item col-xl-4 col-md-12">
+						<img class="img-fluid rounded-circle col-6 col-xl-7 col-md-4" src="img/keisuke_someya.jpg" alt="">
+						<div class="inside p-lg-3 p-2">
+							<div class="name pt-4 pb-1">
+								<p>フリーランス講師</p>
+								<p>染谷 佳佑</p>
+							</div><!--/.name-->
+							<div class="text-justify px-4 pb-3">
+								<p>ISARA(THAILAND)CO.,LTD.の代表です。学生起業の後にリクルートへ就職、その後独立し、
+								海外移住しました。今はフリーランスとしてリモートワークで日本円を稼ぎ、外国通貨に変えて使い、
+								海外を旅してます。営業、ブログPVアップ(最高月間150万PV)、ビジネス構築が専門です。</p>
+							</div><!--/.text-->
+						</div><!--/.inside-->
+					</div><!--/.item-->
+					<div class="item col-xl-4 col-md-12">
+						<img class="img-fluid rounded-circle col-6 col-xl-7 col-md-4" src="img/yuki.png" alt="">
+						<div class="inside p-lg-3 p-2">
+							<div class="name pt-4 pb-1">
+								<p>フリーランス講師</p>
+								<p>成田　雄輝</p>
+							</div><!--/.name-->
+							<div class="text-justify px-4 pb-3">
+								<p>バンコクのシェアハウスのオーナーをやりながら一年の大半をタイで過ごしています。 
+								大学時代から今に至るまでネットだけで生計を立てているので、自由歴だけは講師陣の中で最長です！ 
+								母親がタイ人という事もありタイには精通してますので、こちらでの生活のサポートはお任せください！</p>
+							</div><!--/.text-->
+						</div><!--/.inside-->
+					</div><!--/.item-->
+					<div class="item col-xl-4 col-md-12">
+						<img class="img-fluid rounded-circle col-6 col-xl-7 col-md-4" src="img/manabu.png" alt="">
+						<div class="inside p-lg-3 p-2 ">
+							<div class="name pt-4 pb-1">
+								<p>フリーランスエンジニア</p>
+								<p>坂内　学</p>
+							</div><!--/.name-->
+							<div class="text-justify px-4 pb-3 mb-lg-4">
+								<p>アドバイザーとして参画しました。新卒で海外就職して１１ヶ月後に退職。
+								今は日本にいたり海外にいたりでゆるくフリーランスをしています。</p>
+								<p>お仕事はWebマーケティングとプログラミングが専門領域です。</p>
+							</div><!--/.text-->
+						</div><!--/.inside-->
+					</div><!--/.item-->
+				</div><!--/.flex_item-->
+				</div><!--/.flex_box-->
+			</div><!--/.wrapper-->
+		</div><!--/.member-->
+		</section><!--/.member----------------------------->
 		
 		<section class="9">
 		</section>
