--- a/index.html
+++ b/index.html
@@ -362,9 +362,54 @@
 			</div><!--/.opinion_box-->
 		</section><!--/.opinion---------------------------->
 		
-		<!--/.sassの学習し始める-->
-		<section class="10">
-		</section>
+		<section class="learn2">
+		<div id="learn2">
+			<div class="wrapper container-fluid col-lg-10 col-12">
+				<div class="sub_title">
+					<h2 class="pt-2 pt-sm-2">iSara[イサラ]で学べる内容</h2>
+					<p class="pb-3">渡航前の事前課題と渡航中に学べることの一覧です。</p>
+				</div><!--/.sub_title-->
+				<div class="flex_box">
+				<div class="flex_item d-flex flex-row flex-wrap">
+					<div class="item px-0 col-lg-4 col-md-5 col-12">
+						<div class="item_title">
+							<p>渡航前の事前学習</p>
+						</div><!--/.item_title-->
+						<div class="item_content">
+							<p class="mt-3">０から始めるプログラミング事前学習講座</p>
+							<p>参加者グループコミュニティ</p>
+							<p>チャットサポート</p>
+							<p>事前スカイプコンサル</p>
+							<p>環境構築の事前学習</p>
+							<p>jQueryの事前学習講座</p>
+							<p>Bootstrapの事前講座</p>
+							<p>PHP / Mysqlの事前学習講座</p>
+							<p>稼ぐためのHTML/CSS講座</p>
+							<p>WordPressの事前学習講座</p>
+						</div><!--item_content-->
+					</div><!--/.item-->
+					<div class="item px-0 col-lg-4 col-md-5 col-12">
+						<div class="item_title">
+							<p>バンコク渡航中</p>
+						</div><!--/.item_title-->
+						<div class="item_content">
+							<p class="mt-3">フリーランス独立術講座</p>
+							<p>実際の実務案件をこなす</p>
+							<p>ノマドフリーランス体験</p>
+							<p>バンコク生活体験</p>
+							<p>クラウドソーシング活用講座</p>
+							<p>フリーランスのための営業講座</p>
+						</div><!--/.item_content-->
+					</div><!--/.item-->
+				</div><!--/.flex_item-->
+				</div><!--/.flex_box-->
+			</div><!--/.wrapper-->
+		</div><!--/.learn2 id-->
+		<div class="about2_blue px-4">
+				<p>講座費用258,000円以上の金額が稼げるまで「永久サポート延長」します。</p>
+				<p>つまりリスク０で参加できます。</p>
+			</div><!--/.about2_blue-->
+		</section><!--/.learn2----------------------------->
 		
 		<section class="11">
 		</section>
