--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				</div><!--/.flex_box-->
 			</div><!--/.wrapper-->
 		</div><!--/.id about2----------------------------->
-			<div class="about2_blue">
+			<div class="about2_blue pb-md-3">
 				<p>スキルアップしてもフリーランスエンジニア<br>として食べていくことは難しい。</p>
 				<p>フリーランスには<space>プログラミングスキル以外</space>が大切。</p>
 			</div><!--/.about2_blue-->
@@ -176,10 +176,10 @@
 					<p>iSaraの学習では、エンジニアとして<br>「稼ぐ」ために必要な能力を身に着けます。</p>
 				</div><!--/.learn_item-->
 				<div class="learn_box  mb-lg-5 mb-md-5 mb-4 d-flex flex-row justify-content-center">
-					<img class="img-fluid" src="img/salesskill.jpg" alt="">
-					<img class="img-fluid" src="img/knowledge.jpg" alt="">
-					<img class="img-fluid" src="img/skillup.jpg" alt="">
-					<img class="img-fluid" src="img/freelanceconnection.jpg" alt="">
+					<img class="img-fluid img-responsive" src="img/salesskill.jpg" alt="">
+					<img class="img-fluid img-responsive" src="img/knowledge.jpg" alt="">
+					<img class="img-fluid img-responsive" src="img/skillup.jpg" alt="">
+					<img class="img-fluid img-responsive" src="img/freelanceconnection.jpg" alt="">
 				</div><!--/.learn_box-->
 				<div class="learn_text">
 					<p>これらを教えるのがiSaraです。</p>
