--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 					<p>iSaraの学習では、エンジニアとして<br>「稼ぐ」ために必要な能力を身に着けます。</p>
 				</div><!--/.learn_item-->
 				<div class="learn_box  mb-lg-5 mb-md-5 mb-4 d-flex flex-row justify-content-center">
-					<img class="img-fluid img-responsive" src="img/salesskill.jpg" alt="">
-					<img class="img-fluid img-responsive" src="img/knowledge.jpg" alt="">
-					<img class="img-fluid img-responsive" src="img/skillup.jpg" alt="">
-					<img class="img-fluid img-responsive" src="img/freelanceconnection.jpg" alt="">
+					<img src="img/salesskill.jpg" alt="">
+					<img src="img/knowledge.jpg" alt="">
+					<img src="img/skillup.jpg" alt="">
+					<img src="img/freelanceconnection.jpg" alt="">
 				</div><!--/.learn_box-->
 				<div class="learn_text">
 					<p>これらを教えるのがiSaraです。</p>
