--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				</div><!--/.flex_box-->
 			</div><!--/.wrapper-->
 		</div><!--/.id about2----------------------------->
-			<div class="about2_blue pb-md-3">
+			<div class="about2_blue">
 				<p>スキルアップしてもフリーランスエンジニア<br>として食べていくことは難しい。</p>
 				<p>フリーランスには<space>プログラミングスキル以外</space>が大切。</p>
 			</div><!--/.about2_blue-->
