--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 						<img class="navbar-brand" src="img/isaralogo.png" alt="#">
 						<p>バンコクのノマドエンジニア育成講座</p>
 					</div><!--item-->
-					<div class="nav_item2 pt-lg-2 pt-0">
+					<button class="nav_item2 pt-lg-2 pt-0">
 						<a href="#"><btn type="button"></btn></a>
-					</div><!--item-->
+					</button><!--item-->
 				  </div><!--/.nav_container-->
 				</nav><!--/.nav-->
 				<div class="header_container">
@@ -58,10 +58,10 @@
 					<p>まずは２０日間で、<br>月１０万稼げるスキルを手にいれよう。</p>
 					<p class="mb-lg-5 mb-3 cat">※受講料金は実質０円です。詳しくは資料請求をどうぞ。</p>
 				</div><!--/.text_box-->
-				<div class="orange_btn">
+				<button class="orange_btn col-10">
 					<btn class="col-10" type="button"><p class="pt-4">
 					<a href="#">お問い合わせ＆資料請求はこちら</a></p></btn>
-				</div>
+				</button>
 				<div class="text_box2">
 					<p class="pt-lg-5 pt-md-4 pt-4">第６期生：2019年11月25日~2019年12月14日<br>※締め切りました</p>
 					<p class="py-3">第７期生：2020年2月17日~2020年3月7日<br>※締め切りました</p>
