--- a/index.html
+++ b/index.html
@@ -518,9 +518,9 @@
 						<div class="card-header" id="headingOne">
 						  <h5 class="mb-0 d-flex flex-row">
 							<img class="img-fluid" src="img/skypeconsulting.png" alt="">
-							<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+							<div class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 							  <p class="mb-0">Skypeで事前コンサル</p>
-							</button>
+							</div>
 						  </h5>
 						</div>
 
@@ -538,9 +538,9 @@
 						<div class="card-header" id="headingTwo">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/preworks.png" alt="">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 							  <p class="mb-0">事前課題の提出</p>
-							</button>
+							</div>
 						  </h5>
 						</div>
 						<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
@@ -558,9 +558,9 @@
 						<div class="card-header" id="headingThree">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/flight.png" alt="">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 							  <p class="mb-0">現地に渡航</p>
-							</button>
+							</div>
 						  </h5>
 						</div>
 						<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
@@ -576,9 +576,9 @@
 						<div class="card-header" id="headingFour">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/personwithlight.png" alt="">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
 							  <p class="mb-0">実案件を通して学ぶ</p>
-							</button>
+							</div>
 						  </h5>
 						</div>
 						<div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
@@ -594,9 +594,9 @@
 						<div class="card-header" id="headingFive">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/jobsupport.png" alt="">
-							<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
 							  <p class="mb-0">帰国後の仕事獲得サポート付き</p>
-							</button>
+							</div>
 						  </h5>
 						</div>
 						<div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
