--- a/index.html
+++ b/index.html
@@ -637,8 +637,50 @@
 		</div><!--/.bangkok-->
 		</section><!--/.bangkok--------------------------->
 		
-		<section class="13">
-		</section>
+		<section class="present">
+			<div class="wrapper container-fluid py-5">
+				<div class="present_item">
+					<div class="sub_title text-center pb-4">
+						<h2><i class="fas fa-gift fa-xs"></i>iSara受講生への参加特典</h2>
+						<p class="py-4"><space>講座費用258,000円以上の金額が稼げるまでの「永久サポート延長」</space>
+						を追加します。つまり、<space>実質０円</space>です。</p>
+					</div><!--/.sub_title-->
+					<div class="flex_box col-lg-10 col-12 mx-auto">
+						<div class="presentboxpc mx-auto py-5 d-flex flex-lg-row flex-column justify-content-around align-items-center">
+							<div class="item text-center pt-4">
+								<h2 class="title">特典１</h2>
+								<p class="px-3">講座費用258,000円以上の金額が稼げるまで、
+								「永久サポート延長」。リスク０で参加できます。</p>
+							</div><!--/.item-->
+							<div class="item my-lg-0 my-3 text-center pt-4">
+								<h2 class="title">特典２</h2>
+								<p class="px-3">iSaraフリーランスコミュニティ参加権利。
+								案件の紹介や、新施設OPENの際の優先利用権が受けられます。</p>
+							</div><!--/.item-->
+							<div class="item text-center pt-4">
+								<h2 class="title">特典３</h2>
+								<p class="px-3">講座参加後のシェアハウス利用権利
+								（ドンムアン空港至近のため、とても便利です）</p>
+							</div><!--/.item-->
+						</div><!--/.presentboxpc-->
+						<div class="presentboxsm d-flex flex-column">
+							<div class="item">
+								<h2 class="circletitle">特典１</h2>
+								<p text-left>参加費以上の金額が稼げるまで「永久サポート」参加費用は実質0円です。</p>
+							</div><!--/.item-->
+							<div class="item">
+								<h2 class="circletitle">特典2</h2>
+								<p text-left>フリーランスエンジニアになる為の動画講義を無料プレゼント</p>
+							</div><!--/.item-->
+							<div class="item">
+								<h2 class="circletitle">特典3</h2>
+								<p text-left>フリーランス講師による個別コンサル（渡航前の週１回）</p>
+							</div><!--/.item-->
+						</div><!--/.presentboxpsm-->
+					</div><!--/.flex_box-->
+				</div><!--/.present_item-->
+			</div><!--/.wrapper-->
+		</section><!--/.present-------------------------->
 		
 		<section class="14">
 		</section>
