button accordion update 01.06

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 						<div class="card-header" id="headingTwo">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/preworks.png" alt="">
-							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							<div class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 							  <p class="mb-0">事前課題の提出</p>
 							</div>
 						  </h5>
@@ -558,7 +558,7 @@
 						<div class="card-header" id="headingThree">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/flight.png" alt="">
-							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							<div class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
 							  <p class="mb-0">現地に渡航</p>
 							</div>
 						  </h5>
@@ -576,7 +576,7 @@
 						<div class="card-header" id="headingFour">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/personwithlight.png" alt="">
-							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+							<div class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
 							  <p class="mb-0">実案件を通して学ぶ</p>
 							</div>
 						  </h5>
@@ -594,7 +594,7 @@
 						<div class="card-header" id="headingFive">
 						  <h5 class="mb-0">
 							<img class="img-fluid" src="img/jobsupport.png" alt="">
-							<div class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+							<div class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
 							  <p class="mb-0">帰国後の仕事獲得サポート付き</p>
 							</div>
 						  </h5>
