--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 						<div class="card-header" id="headingOne">
 						  <h5 class="mb-0 d-flex flex-row">
 							<img class="img-fluid" src="img/skypeconsulting.png" alt="">
-							<div class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+							<div class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
 							  <p class="mb-0">Skypeで事前コンサル</p>
 							</div>
 						  </h5>
@@ -663,17 +663,23 @@
 								（ドンムアン空港至近のため、とても便利です）</p>
 							</div><!--/.item-->
 						</div><!--/.presentboxpc-->
-						<div class="presentboxsm d-flex flex-column">
+						<div class="presentboxsm d-flex flex-column justify-content-around">
 							<div class="item">
-								<h2 class="circletitle">特典１</h2>
+								<div class="circlet">
+									<h2 class="circletitle">特典１</h2>
+								</div>
 								<p text-left>参加費以上の金額が稼げるまで「永久サポート」参加費用は実質0円です。</p>
 							</div><!--/.item-->
 							<div class="item">
-								<h2 class="circletitle">特典2</h2>
+								<div class="circlet">
+									<h2 class="circletitle">特典2</h2>
+								</div>
 								<p text-left>フリーランスエンジニアになる為の動画講義を無料プレゼント</p>
 							</div><!--/.item-->
 							<div class="item">
-								<h2 class="circletitle">特典3</h2>
+								<div class="circlet">
+									<h2 class="circletitle">特典3</h2>
+								</div>
 								<p text-left>フリーランス講師による個別コンサル（渡航前の週１回）</p>
 							</div><!--/.item-->
 						</div><!--/.presentboxpsm-->
@@ -682,8 +688,26 @@
 			</div><!--/.wrapper-->
 		</section><!--/.present-------------------------->
 		
-		<section class="14">
-		</section>
+		<section class="concept2">
+		<div id="concept2">
+			<div class="wrapper container-fluid text-white text-center mx-auto pb-4 col-md-10 col-12">
+				<div class="concept2_title col-12">
+					<h2 class="title pb-3 pt-4">iSaraはボランティアではありません</h2>
+				</div><!--/.concept2_title-->
+				<div class="concept2_item col-12">
+					<p>ここまでみると、実質０円で各種サポートもある、特典が多すぎて逆に怪しい。<br>
+					そう思われるかもしれません。<br>しかし、iSaraが目指すことは異なります。</p>
+				</div><!--/.concept2_item-->
+				<div class="concept2_item col-12">
+					<h2 class="sub_title py-4">月10万円稼げる<br class="textt">エンジニアを輩出し続ける。</h2>
+				</div><!--/.concept2_item-->
+				<div class="concept2_item pb-4 col-12">
+					<p>最大の価値がこれです。<br>iSaraの卒業生が稼ぎ続けることで、小さな経済が動き始めます。
+					<br>ここに最大の価値があり、この講座はその序章にすぎません。</p>
+				</div><!--/.concept2_item-->
+			</div><!--/.wrapper-->
+		</div><!--/.concept2 id-->
+		</section><!--/.concept2-------------------------->
 		
 		<section class="15">
 		</section>
