--- a/index.html
+++ b/index.html
@@ -709,11 +709,37 @@
 		</div><!--/.concept2 id-->
 		</section><!--/.concept2-------------------------->
 		
-		<section class="15">
-		</section>
+		<section class="message bg-white">
+			<div class="wrapper py-5 container-fluid">
+				<div class="sub_title">
+					<h2 class="py-4">創業者からのメッセージ</h2>
+					<p>「一生もののスキル」を身に着け、<br>ノマドライフを楽しもう！</p>
+				</div><!--/.sub_title-->
+				<div class="flex_box pt-4 mx-auto col-xl-10 col-12">
+					<div class="flex_item d-flex flex-lg-row flex-md-column flex-column justify-content-center">
+						<div class="img col-lg-2 col-12">
+							<img class="img-fluid" src="img/IMG_1139-768x576.jpg" alt="">
+						</div><!--/.img-->
+						<div class="contents pt-lg-0 pt-md-5 pt-sm-2 pt-2 col-lg-7 col-12">
+							<p>初めまして。「iSara（イサラ）」創業者の染谷佳佑と申します。</p>
+							<p>iSaraの開講は、僕達講師陣にとってもとても大きな挑戦です。
+							今回、参加者に圧倒的な価値提供をするために、超少人数制だからできる内容を用意しました。</p>
+							<ul class="pl-4">
+								<li>「Webエンジニアとして稼ぐ」に特化した超実践的カリキュラム</li>
+								<li>フリーランスとして生計を立て、いつでも世界中を旅できるスキル、収入のある講師陣のみを厳選</li>
+								<li>講座参加者が25万8,000円の参加費以上を稼ぐまでの無期限サポート延長</li>
+							</ul>
+							<p>ここまでのカリキュラムを備えた講座は、世界で唯一iSaraだけでしょう。 iSaraでプログラミングや営業を学ぶことで、「一生ものの潰しが効くスキル」が身につきます。 
+							もちろん勉強だけでなく、バンコクを楽しめるプログラムも用意しています！</p>
+							<p>３ヶ月間徹底的にサポートします。ぜひバンコクでお会いしましょう。</p>
+						</div><!--/.contents-->
+					</div><!--/.flex_item-->
+				</div><!--/.flex_box-->
+			</div><!--/.wrapper-->
+		</section><!--/.message--------------------------->
 		
-		<section class="16">
-		</section>
+		<section class="form">
+		</section><!--/.form------------------------------>
 		
 		<section class="17">
 		</section>
