--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<p>バンコクのノマドエンジニア育成講座</p>
 					</div><!--item-->
 					<button class="nav_item2 pt-lg-2 pt-0">
-						<a href="#"><btn type="button"></btn></a>
+						<a href="#form"><btn type="button"></btn></a>
 					</button><!--item-->
 				  </div><!--/.nav_container-->
 				</nav><!--/.nav-->
@@ -60,7 +60,7 @@
 				</div><!--/.text_box-->
 				<button class="orange_btn col-10">
 					<btn class="col-10" type="button"><p class="pt-4">
-					<a href="#">お問い合わせ＆資料請求はこちら</a></p></btn>
+					<a href="#form">お問い合わせ＆資料請求はこちら</a></p></btn>
 				</button>
 				<div class="text_box2">
 					<p class="pt-lg-5 pt-md-4 pt-4">第６期生：2019年11月25日~2019年12月14日<br>※締め切りました</p>
@@ -412,7 +412,6 @@
 			</div><!--/.about2_blue-->
 		</section><!--/.learn2----------------------------->
 		
-		<!--/.1日２セクションごと完走する-->
 		<section class="flow">
 			<div class="wrapper container-fluid">
 				<div class="sub_title">
@@ -739,10 +738,35 @@
 		</section><!--/.message--------------------------->
 		
 		<section class="form">
+			<div id="form" class="wrapper text-center container-fluid py-5 col-lg-9 col-md-10 col-12">
+				<div class="sub_title">
+					<h2 class="py-3"><i class="far fa-file-alt"></i>資料請求フォーム</h2>
+					<p>まずは無料で資料請求からどうぞ。</p>
+				</div><!--/.sub_title-->
+				<form action="#">
+					<div>
+						<input class="col-lg-9 col-md-10 col-12" type="text" name="last-name" placeholder="姓">
+					</div>
+					<div class="py-4">
+						<input class="col-lg-9 col-md-10 col-12" type="text" name="first-name" placeholder="名">
+					</div>
+					<div>
+						<input class="col-lg-9 col-md-10 col-12" type="email" name="your-email" placeholder="メールアドレス">
+					</div>
+					<div class="py-5">
+						<textarea class="col-lg-9 col-md-10 col-12" name="your-msg" placeholder="質問などはこちら（空欄でもOKです）"></textarea>
+					</div>
+					<button class="col-lg-9 col-md-10 col-12" type="submit">
+						<a href="#">送信</a>
+					</button><!--/.submit-->
+				</form><!--/.form-->
+			</div><!--/.wrapper-->
 		</section><!--/.form------------------------------>
 		
-		<section class="17">
-		</section>
+		<section class="questions">
+			<div class="wrapper container-fluid">
+			</div><!--/.wrapper-->
+		</section><!--/.questions------------------------->
 		
 	</div><!--/.body_wrapper-->
 		<footer class="footer">
