correction for button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<p>バンコクのノマドエンジニア育成講座</p>
 					</div><!--item-->
 					<button class="nav_item2 pt-lg-2 pt-0">
-						<a href="#form"><btn type="button"></btn></a>
+						<a href="#form"></a>
 					</button><!--item-->
 				  </div><!--/.nav_container-->
 				</nav><!--/.nav-->
@@ -60,8 +60,7 @@
 					<p class="mb-lg-5 mb-3 cat">※受講料金は実質０円です。詳しくは資料請求をどうぞ。</p>
 				</div><!--/.text_box-->
 				<button class="orange_btn col-10">
-					<btn class="col-10" type="button"><p class="pt-4">
-					<a href="#form">お問い合わせ＆資料請求はこちら</a></p></btn>
+					<p class="pt-4"><a href="#form">お問い合わせ＆資料請求はこちら</a></p>
 				</button>
 				<div class="text_box2">
 					<p class="pt-lg-5 pt-md-4 pt-4">第６期生：2019年11月25日~2019年12月14日<br>※締め切りました</p>
